Compiler/tests/typing/good/testfile-return-1.rs
fn f() -> bool { return true; }
fn main() { }
