Compiler/tests/typing/bad/testfile-return-6.rs

fn f(x: i32) -> i32 { if x == 1 { return true; } else { return 42; } }
fn main() {}
